RESOLVED FIXED257955
Fix null pointer crash in WorkerScriptLoader::cancel()
https://bugs.webkit.org/show_bug.cgi?id=257955
Summary Fix null pointer crash in WorkerScriptLoader::cancel()
youenn fablet
Reported 2023-06-12 07:56:22 PDT
Fix null pointer crash in WorkerScriptLoader::cancel()
Attachments
Radar WebKit Bug Importer
Comment 1 2023-06-12 07:56:47 PDT
youenn fablet
Comment 2 2023-06-12 07:59:42 PDT
EWS
Comment 3 2023-06-12 08:58:10 PDT
Committed 265070@main (db0adb3f5ce1): <https://commits.webkit.org/265070@main> Reviewed commits have been landed. Closing PR #14862 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.