Fix null pointer crash in WorkerScriptLoader::cancel() https://bugs.webkit.org/show_bug.cgi?id=257955 rdar://110643539

Reviewed by David Kilzer.

Make sure to use the local variable loader instead of m_scriptLoader which is nullified just before.
Switch to std::exchange since it is more semantically correct.

* LayoutTests/http/wpt/service-workers/service-worker-pending-job-cancel-expected.txt: Added.
* LayoutTests/http/wpt/service-workers/service-worker-pending-job-cancel-worker.js: Added.
* LayoutTests/http/wpt/service-workers/service-worker-pending-job-cancel.html: Added.
* Source/WebCore/workers/service/ServiceWorkerJob.cpp:
(WebCore::ServiceWorkerJob::notifyFinished):
(WebCore::ServiceWorkerJob::cancelPendingLoad):

Canonical link: https://commits.webkit.org/265070@main